# Storm

./: README.md
StormFN-Backend/: main.py  news.json  pyproject.toml  requirements.txt
StormFN-Backend/files/cloudstorage/: DefaultEngine.ini  DefaultGame.ini  DefaultRuntimeOptions.ini
StormFN-Backend/files/config/: default.json
StormFN-Backend/files/workers/: api.py  fortnite.py  profile.py
StormFN-Launcher/: README.md  StormFN Launcher.sln
StormFN-Launcher/StormFN Launcher/: App.config  App.xaml  App.xaml.cs  Config_file.Designer.cs  Config_file.cs  Config_file.settings  MainWindow.xaml  MainWindow.xaml.cs  StormFN Launcher.csproj
StormFN-Launcher/StormFN Launcher/Epic/: Auth.cs  Exchange.cs  devicecode.cs
StormFN-Launcher/StormFN Launcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
StormFN-Launcher/StormFN Launcher/Services/: Auth.cs  Exchange.cs  Injector.cs  Token.cs  Win32.cs  devicecode.cs
StormFN-Launcher/StormFN Launcher/Utilities/: Inject.cs  win32.cs
