[tool.poetry]
name = "plushsereneinstances"
version = "0.1.0"
description = "pip install -r requirements.txt ; python main.py"
authors = ["xploit guy freeglitchonyt@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.3.2"
sanic-ipware = "^0.1.0"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
